<resources>
    <string name="app_name">NumericalApp</string>
    <string name="machine_bits">Machine bits available: </string>
    <string name="mantissa_bits">Mantissa bits amount: </string>
    <string name="exponent_bits_amount">Exponent bits amount: </string>
    <string name="save">Save</string>
    <string name="eafit_university_logo">EAFIT University logo</string>
    <string name="numerical_analysis_app_logo">Numerical Analysis App logo</string>
    <string name="welcome_to_numerical_analysis">Welcome to Numerical Analysis App! please select an option from the menu to interact whth this application. Remember that first of all a machine needs to be set up \n \n  ©copyright 2019 \n  Eafit University</string>
    <string name="clean_machine_options">clean</string>
    <string name="setup_machine">setup machine</string>
    <string name="machine_numbers">machine numbers</string>
    <string name="math_operations">math opearations</string>
    <string name="home">home</string>
    <string name="machine_numbers_title">Numbers on the macihine</string>
    <string name="biggest_number">biggest number</string>
    <string name="epsilon">epsilon</string>
    <string name="smallest_positive">smallest positive</string>
    <string name="operations_on_machine">Operations on Machine</string>
    <string name="first_number">Number 1 :</string>
    <string name="second_number">Number 2 :</string>
    <string name="calculate_machine_numbers">calculate machine numbers</string>
    <string name="calculate_decimal_numbers">calculate decimal numbers</string>
    <string name="perform_addition">addition (+)</string>
    <string name="perform_subtraction"> subtraction (-)</string>
    <string name="perform_multiplication">multiplication (*)</string>
    <string name="machine_number_txt">if it is a machine number, use format: \n mantissa sign/mantissa number/exponent sign/exponent number \n example: \n +/1101/-/0101</string>
</resources>
