<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/img_logo_app_ops"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="#ffffff"
        android:backgroundTint="#ffffff"
        app:srcCompat="@drawable/eafit_logo"
        android:contentDescription="@string/eafit_university_logo"/>

    <TextView
        android:id="@+id/lbl_machine_ops"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/operations_on_machine"
        android:textAlignment="center"
        android:textColor="#044607"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/lbl_first_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/first_number"
        android:textColor="#4CAF50"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_machine_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:text="@string/machine_number_txt"
        android:textColor="#4CAF50" />

    <EditText
        android:id="@+id/txt_first_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textNoSuggestions"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/lbl_second_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:text="@string/second_number"
        android:textColor="#4CAF50"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/txt_second_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal|numberSigned"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/btn_machine_numbers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:backgroundTint="#B8CECE"
        android:text="@string/calculate_machine_numbers"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_decimal_nums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:backgroundTint="#B8CECE"
        android:text="@string/calculate_decimal_numbers"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:backgroundTint="#B8CECE"
        android:text="@string/perform_addition"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_subtract"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:backgroundTint="#B8CECE"
        android:text="@string/perform_subtraction"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_multiply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:backgroundTint="#B8CECE"
        android:text="@string/perform_multiplication"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btn_clean_nums"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:backgroundTint="#8FCA76"
        android:text="@string/clean_machine_options"
        android:textColor="#252524"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/lbl_result_op"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="2dp"
        android:text=""
        android:textColor="#F44336"
        tools:ignore="LabelFor" />

</LinearLayout>