<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">



        <ImageView
            android:id="@+id/img_logo_app_main"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="#ffffff"
            android:backgroundTint="#ffffff"
            app:srcCompat="@drawable/eafit_logo"
            android:contentDescription="@string/eafit_university_logo"/>

        <ImageView
            android:id="@+id/img_logo_numerical_app_main"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="0dp"
            android:contentDescription="@string/numerical_analysis_app_logo"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/numerical_logo" />

        <TextView
            android:id="@+id/lbl_main_help"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="5dp"
            android:text="@string/welcome_to_numerical_analysis"
            android:textAlignment="center"
            android:textColor="#494C4D"
            android:textSize="18sp"
            tools:ignore="LabelFor" />



    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>